--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "styled-components": "^5.1.1",
     "underscore": "^1.10.2"
   }
 }
