--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "node-dev": "nodemon server.js --exec",
     "dev": "next dev",
     "build": "next build",
     "export": "next export",
     "start": "next start"
   },
   "dependencies": {
+    "@koa/cors": "^3.1.0",
+    "koa": "^2.13.0",
+    "koa-body": "^4.2.0",
+    "koa-router": "^9.1.0",
     "next": "9.4.4",
+    "nodemon": "^2.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.1.1",
