--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@koa/cors": "^3.1.0",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "firebase": "^7.16.0",
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
     "koa-router": "^9.1.0",
+    "moment": "^2.27.0",
     "next": "9.4.4",
     "nodemon": "^2.0.4",
     "react": "16.13.1",
